add all images and HTML

--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -25,6 +25,50 @@
                 <img src="./images/dogonchair.png" class="chairdog"  alt="Good Girl Winnie Sitting in a Chair"> 
          </div>
      </Header>
-     
+     <div id="main">
+        <h3>Winnie's Interests</h3>
+        <div class="interestimages">
+            <div class="int1">
+                <img src="./images/pt.jpeg" alt="favorite purple toy"
+                width="200px"
+                height="200px">
+                <p>Purple Toy is a long time friend that provides a good chew as well as the occasional treat.</p>
+            </div>
+            <div class="int2">
+                <img src="./images/tb.jpeg" alt="tennis ball"
+                width="200px"
+                height="200px">
+                <p>Tennis balls make playing fetch especially fun.some of them have squeakers that just don't quit!</p>
+            </div>
+            <div class="int3">
+                <img src="./images/zoom.jpeg" alt="Usain Bolt Smiling"
+                width="200px"
+                height="200px">
+                <p>Sprinting and zoomies are a regular past time. Multiple athletic events can often be combined such as sprinting, high jump, and even hurdles!</p>
+            </div>
+            <div class="int4">
+                <img src="./images/nap.jpeg" alt="script of words nap time"
+                width="200px"
+                height="200px">
+                <p>All work and no rest is no way to live which is why naps and snuggles are a must several times a day.</p>
+            </div>
+        </div>
+        <div class="qoute box">
+            <p>Today was a good day. I got to eat and run and play and chew on purple toy and have snuggles and naps and even play ball and lick. I bet tomorrow will be just as good. Now I just want to watch 101 dalmations with mom and dad. Those dogs are crazy!Woof!Woof!</p>
+            <div class="qauthor">
+                <p> Winnifred Louis, Dog Scholar</p>
+            </div>
+        </div>
+        <div class="cta">
+            <div class="ctatext" >
+                <h5>It's time to meet Winnie!</h5>
+                <p>Sign up to pet Winnie...that is if you think she is a good girl...</p>
+            </div>   
+            <button> Pet Winnie</button>
+        </div>
+     </div>
+     <footer>
+        <p>Inspired by The Odin Project</p>
+     </footer>
 </body>
 </html>
