--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -26,30 +26,31 @@
          </div>
      </Header>
      <div id="main">
+        <h5>Winnie's Interests</h5>
         <div class="interestimages">
             <div class="int1">
                 <img src="./images/pt.jpeg" alt="favorite purple toy"
-                width="200px"
-                height="200px">
-                <p>Purple Toy is a long time friend that provides a good chew as well as the occasional treat.</p>
+                width="125px"
+                height="125px">
+                <p>Purple Toy is a long time friend.</p>
             </div>
             <div class="int2">
                 <img src="./images/tb.jpeg" alt="tennis ball"
-                width="200px"
-                height="200px">
-                <p>Tennis balls make playing fetch especially fun.some of them have squeakers that just don't quit!</p>
+                width="125px"
+                height="125px">
+                <p>Tennis balls make playing fetch especially fun.</p>
             </div>
             <div class="int3">
                 <img src="./images/zoom.jpeg" alt="Usain Bolt Smiling"
-                width="200px"
-                height="200px">
-                <p>Sprinting and zoomies are a regular past time. Multiple athletic events can often be combined such as sprinting, high jump, and even hurdles!</p>
+                width="125px"
+                height="125px">
+                <p>Sprinting and zoomies are a regular past time.</p>
             </div>
             <div class="int4">
                 <img src="./images/nap.jpeg" alt="script of words nap time"
-                width="200px"
-                height="200px">
-                <p>All work and no rest is no way to live which is why naps and snuggles are a must several times a day.</p>
+                width="125px"
+                height="125px">
+                <p>Naps and snuggles are a must several times a day.</p>
             </div>
         </div>
         <div class="qoute box">
