--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -53,18 +53,21 @@
                 <p>Naps and snuggles are a must several times a day.</p>
             </div>
         </div>
-        <div class="qoute box">
+        <div class="quotebox">
             <p>Today was a good day. I got to eat and run and play and chew on purple toy and have snuggles and naps and even play ball and lick. I bet tomorrow will be just as good. Now I just want to watch 101 dalmations with mom and dad. Those dogs are crazy!Woof!Woof!</p>
             <div class="qauthor">
-                <p> Winnifred Louis, Dog Scholar</p>
+                <p> -Winnifred Louis, Dog Scholar</p>
             </div>
+        </div>
+        <div class="bottommain">
             <div class="cta">
-                <div class="ctatext" >
-                    <h5>It's time to meet Winnie!</h5>
-                    <p>Sign up to pet Winnie...that is if you think she is a good girl...</p>
-                </div>   
-                <button> Pet Winnie</button>
-            </div>
+                <div class="ctatext">
+                 <p><b>It's time to meet Winnie </b></p>
+                 <p class="subtext">That is if you think she is a good girl...</p>
+                </div> 
+            <button> Pet Winnie</button>
+            </div> 
+        </div>
         </div>
      </div>
      <footer>
