final-scalability issue in width of list. Needs v2

--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -22,7 +22,7 @@
              <p>Winnie has grown up so fast but is still a puppy. She is loved by all and loves all right back. She is a puppy which means regular zoomies and lots of energy! Don't let that fool you though, she loves her snuggles too!</p>
              <button>Come meet    Winnie</button>
             </div> 
-                <img src="./images/dogonchair.png" class="chairdog"  alt="Good Girl Winnie Sitting in a Chair"> 
+                <img src="./images/dogonchair.png" class="chairdog" width="300px"height="200px"alt="Good Girl Winnie Sitting in a Chair"> 
          </div>
      </Header>
      <div id="main">
